k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quasar
  labels:
    name: quasar
    environment: production
