k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quasar-frontend-service
  namespace: quasar
  labels:
    app: quasar-frontend
    tier: frontend
spec:
  type: NodePort
  selector:
    app: quasar-frontend
  ports:
    - port: 4173
      targetPort: 4173
      protocol: TCP
      nodePort: 30073
      name: http
