k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quasar-ingress
  namespace: quasar
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: quasar.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: quasar-frontend-service
                port:
                  number: 4173
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: quasar-backend-service
                port:
                  number: 4000
